# ghscope

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/ghscope/: __init__.py  api.py  cli.py  frames.py
src/ghscope/commands/: assess.py  contribs.py  health.py  overview.py  review.py  triage.py
src/ghscope/core/: analysis.py  cache.py  github.py  models.py  queries.py
src/ghscope/display/: charts.py  json_out.py  tables.py
