[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghscope"
version = "0.1.0"
description = "GitHub repository intelligence from your terminal"
requires-python = ">=3.12"
dependencies = ["click>=8.0", "rich>=13.0"]
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chris Pachulski", email = "cjpach@icloud.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/ChrisPachulski/ghscope"
Repository = "https://github.com/ChrisPachulski/ghscope"
Issues = "https://github.com/ChrisPachulski/ghscope/issues"

[project.scripts]
ghscope = "ghscope.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
